# cob_right_config_1

./: .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  right_arm.ros2_control.xacro  right_arm.srdf  right_arm.urdf  right_arm.urdf.xacro  ros2_controllers.yaml
launch/: demo.launch.py  demo_gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
